--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ mypy-extensions==0.4.3
 pathspec==0.9.0
 platformdirs==2.4.0
 pylint==2.11.1
+python-dotenv==0.19.0
 regex==2021.9.30
 requests==2.26.0
 toml==0.10.2
