--- a/requirements.txt
+++ b/requirements.txt
@@ -9,12 +9,19 @@ isort==5.9.3
 lazy-object-proxy==1.6.0
 mccabe==0.6.1
 mypy-extensions==0.4.3
+numpy==1.21.2
+pandas==1.3.3
 pathspec==0.9.0
 platformdirs==2.4.0
+plotly==5.3.1
 pylint==2.11.1
+python-dateutil==2.8.2
 python-dotenv==0.19.0
+pytz==2021.3
 regex==2021.9.30
 requests==2.26.0
+six==1.16.0
+tenacity==8.0.1
 toml==0.10.2
 tomli==1.2.1
 typing-extensions==3.10.0.2
