--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 python:
   - "3.9"
 install:
+  - npm install
   - pip install -r requirements.txt
 script:
-  - pylint **/*.py
+  - npm run lint
