--- a/app/package.json
+++ b/app/package.json
@@ -1,3 +1,46 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:8d4e39a4e423df5068bb12f8ad17e7e1cf23f5f123e761a7ad683e0ea457b065
-size 1364
+{
+  "name": "glasgow-litter",
+  "description": "A visualization of Glasgow's litter.",
+  "private": true,
+  "main": "index.jsx",
+  "scripts": {
+    "build": "node build.js",
+    "build:prod": "cross-env NODE_ENV=production npm run build",
+    "clean": "rm -rf build",
+    "dev": "concurrently --kill-others \"npm run build\" \"npm run tsc:watch\" \"npm run sync\"",
+    "format": "prettier --write *.js src/*.{tsx,html}",
+    "lint": "eslint --fix **/*.{ts,tsx}",
+    "sync": "browser-sync start --server --watch --serveStatic build",
+    "tsc": "tsc",
+    "tsc:watch": "tsc --watch"
+  },
+  "keywords": [
+    "glasgow",
+    "litter"
+  ],
+  "author": "Gary Blackwood <gary@garyblackwood.co.uk>",
+  "license": "MIT",
+  "devDependencies": {
+    "@types/geojson": "^7946.0.8",
+    "@types/leaflet": "^1.7.5",
+    "@types/node": "^16.11.1",
+    "@types/react": "^17.0.30",
+    "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "browser-sync": "^2.27.5",
+    "concurrently": "^6.3.0",
+    "cross-env": "^7.0.3",
+    "esbuild": "^0.13.7",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.26.1",
+    "prettier": "^2.4.1",
+    "typescript": "^4.4.4"
+  },
+  "dependencies": {
+    "leaflet": "^1.7.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.2"
+  }
+}
