--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,29 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:f8c9d4bd2e5cc625a195906a3c0a26ba8941e4b921f98de2c53ba3d3dd8e07f4
-size 485
+astroid==2.8.0
+black==21.9b0
+certifi==2021.5.30
+charset-normalizer==2.0.6
+click==8.0.1
+colorama==0.4.4
+idna==3.2
+isort==5.9.3
+lazy-object-proxy==1.6.0
+mccabe==0.6.1
+mypy-extensions==0.4.3
+numpy==1.21.2
+pandas==1.3.3
+pathspec==0.9.0
+platformdirs==2.4.0
+plotly==5.3.1
+pylint==2.11.1
+python-dateutil==2.8.2
+python-dotenv==0.19.0
+pytz==2021.3
+regex==2021.9.30
+requests==2.26.0
+six==1.16.0
+tenacity==8.0.1
+toml==0.10.2
+tomli==1.2.1
+typing-extensions==3.10.0.2
+urllib3==1.26.7
+wrapt==1.12.1
