--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,7 @@
 data/*.json filter=lfs diff=lfs merge=lfs -text
 data/*.csv filter=lfs diff=lfs merge=lfs -text
 data/*.xlsx filter=lfs diff=lfs merge=lfs -text
+data/**/*.json filter=lfs diff=lfs merge=lfs -text
+data/**/*.csv filter=lfs diff=lfs merge=lfs -text
+data/**/*.xlsx filter=lfs diff=lfs merge=lfs -text
 data filter=lfs diff=lfs merge=lfs -text
