--- a/requirements.txt
+++ b/requirements.txt
@@ -1,64 +1,30 @@
-appdirs==1.4.4
-astroid==2.5.6
-black==21.5b2
-bleach==3.3.0
-certifi==2021.5.30
-chardet==3.0.4
-click==8.0.1
+astroid==2.8.4
+black==21.9b0
+certifi==2021.10.8
+charset-normalizer==2.0.7
+click==8.0.3
 colorama==0.4.4
-distlib==0.3.2
-docutils==0.17.1
-filelock==3.0.12
-flake8==3.9.2
-idna==2.7
-importlib-metadata==4.5.0
-isort==5.8.0
-keyring==23.0.1
+idna==3.3
+isort==5.9.3
 lazy-object-proxy==1.6.0
-lxml==4.6.3
 mccabe==0.6.1
 mypy-extensions==0.4.3
-numpy==1.21.2
-packaging==20.9
+numpy==1.21.3
 pandas==1.3.4
 pathspec==0.9.0
-pbr==5.6.0
-pkginfo==1.7.0
 platformdirs==2.4.0
 plotly==5.3.1
-pycodestyle==2.7.0
-pyflakes==2.3.1
-Pygments==2.9.0
-pylint==2.8.3
-pyparsing==2.4.7
-pyperclip==1.7.0
-pypstats==1.4
+pylint==2.11.1
 python-dateutil==2.8.2
 python-dotenv==0.19.1
 pytz==2021.3
-pywin32-ctypes==0.2.0
-readme-renderer==29.0
-regex==2021.9.30
-requests==2.20.1
-requests-toolbelt==0.9.1
-rfc3986==1.5.0
-Shapely==1.7.1
+regex==2021.10.23
+requests==2.26.0
+Shapely==1.8.0
 six==1.16.0
-spcli==1.0.4
-stevedore==3.3.0
 tenacity==8.0.1
 toml==0.10.2
-tomli==1.2.1
-tqdm==4.61.0
-twine==3.4.1
+tomli==1.2.2
 typing-extensions==3.10.0.2
-urllib3==1.26.5
-vanity==2.2.2
-virtualenv==20.4.7
-virtualenv-clone==0.5.4
-virtualenvwrapper==4.8.4
-virtualenvwrapper-win==1.2.6
-webencodings==0.5.1
-wrapt==1.12.1
-youtube-dl==2021.6.6
-zipp==3.4.1
+urllib3==1.26.7
+wrapt==1.13.2
