build: add app lint to travis ci
Former-commit-id: 501d92d16395165acdba9e41453079f787b0771a

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   },
   "scripts": {
     "prepare": "husky install",
-    "lint": "bash -c 'pylint **/*.py'",
+    "lint": "bash -c 'pylint **/*.py' && cd app && npm run lint",
     "format": "black .",
     "py-install": "python -m venv venv && pip install -r requirements.txt"
   },
