fix: travis ci install
Former-commit-id: b3eb7511cc57fd79c6afa0c9f368628d960cfb9d

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
   - "3.9"
 install:
   - npm install
-  - pip install -r requirements.txt
+  - npm run py-install
+  - npm run app-install
 script:
   - npm run lint
