--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "prepare": "husky install",
     "lint": "bash -c 'pylint **/*.py' && cd app && npm run lint",
     "format": "black .",
-    "py-install": "python -m venv venv && pip install -r requirements.txt"
+    "py-install": "python -m venv venv && source venv/Scripts/activate && pip install -r requirements.txt",
+    "app-install": "cd app && npm install && cd .."
   },
   "lint-staged": {
     "*.py": [
