--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "3.9"
 install:
   - npm install
-  - npm run py-install
   - npm run app-install
+  - pip install -r requirements.txt
 script:
   - npm run lint
