fix: travis build
Former-commit-id: e45854435c1706c93dd66be6f9ace86ce2bf1861

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,9 @@ python:
   - "3.9"
 install:
   - npm install
-  - npm run app-install
   - pip install -r requirements.txt
 script:
+  - npm run lint
+  - cd app
+  - npm install
   - npm run lint
