refactor: improve directory structure
Former-commit-id: e7c8cd1f256ab3b46e985328b3ed8a7b0555d4a7

--- a/.gitignore
+++ b/.gitignore
@@ -134,7 +134,9 @@ dmypy.json
 # npm
 node_modules/
 
-# the app
-app/node_modules
-app/build
-app/tsconfig.tsbuildinfo
+# app
+build/
+tsconfig.tsbuildinfo
+
+# nodist
+.node-version
