--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.11.1",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
+    "@types/react-leaflet": "^2.8.2",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "browser-sync": "^2.27.5",
@@ -23,8 +24,8 @@
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.26.1",
     "husky": "^7.0.2",
-    "prettier": "^2.4.1",
     "lint-staged": "^11.2.0",
+    "prettier": "^2.4.1",
     "typescript": "^4.4.4"
   },
   "dependencies": {
