build: git lfs skip smudge
Former-commit-id: 8149db2084e641f7ccc279cc359c291d7200dd40

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: python
 python:
   - "3.9"
+cache:
+  directories:
+    - data
+git:
+  lfs_skip_smudge: true
 install:
   - npm install
   - pip install -r requirements.txt
