--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "clean": "rm -rf build",
     "dev": "concurrently --kill-others \"npm run build\" \"npm run tsc:watch\" \"npm run sync\"",
     "format": "prettier --write app/*.js app/src/*.{tsx,html} && black .",
-    "lint": "bash -c 'pylint **/*.py' && eslint -c app/.eslintrc --fix **/*.{ts,tsx}",
+    "lint": "npm run lint:py && npm run lint:app",
+    "lint:py": "bash -c 'pylint **/*.py'",
+    "lint:app": "eslint -c app/.eslintrc --fix **/*.{ts,tsx}",
     "prepare": "husky install",
     "sync": "browser-sync start --server --watch --serveStatic build",
     "tsc": "tsc --project app/tsconfig.json",
