--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,3 @@
-language: python
-python:
-  - "3.9"
-install:
-  - pip install -r requirements.txt
-script:
-  - npm run lint:py
 cache:
   directories:
     - data
@@ -12,6 +5,13 @@ git:
   lfs_skip_smudge: true
 jobs:
   include:
+    - language: python
+      python:
+        - "3.9"
+      install:
+        - pip install -r requirements.txt
+      script:
+        - npm run lint:py
     - language: node_js
       node_js:
         - 16
