--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "esbuild": "^0.13.7",
     "eslint": "^7.32.0",
     "eslint-plugin-react": "^7.26.1",
+    "fs-extra": "^10.0.0",
     "husky": "^7.0.2",
     "lint-staged": "^11.2.0",
     "prettier": "^2.4.1",
@@ -45,7 +46,7 @@
     "lint:app": "eslint -c app/.eslintrc --fix **/*.{ts,tsx}",
     "prepare": "husky install",
     "start": "npm run dev",
-    "sync": "browser-sync start --server --watch --serveStatic build",
+    "sync": "browser-sync start --server --watch --serveStatic 'build' '.' --index 'build/index.html'",
     "tsc": "tsc --project app/tsconfig.json",
     "tsc:watch": "npm run tsc -- --watch"
   },
