feat: update yolo config

--- a/models/yolov5/cfg/data.yaml
+++ b/models/yolov5/cfg/data.yaml
@@ -1,5 +1,5 @@
 train: ../../data/models/yolov5/train/images
 val: ../../data/models/yolov5/valid/images
 
-nc: 2
-names: ["flytip", "litter"]
+nc: 1
+names: ["litter"]
