--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,11 @@
-astroid==2.8.4
-black==21.9b0
 certifi==2021.10.8
-charset-normalizer==2.0.7
-click==8.0.3
+charset-normalizer==2.0.9
 colorama==0.4.4
+defusedxml==0.7.1
+httpie==2.6.0
 idna==3.3
-isort==5.9.3
-lazy-object-proxy==1.6.0
-mccabe==0.6.1
-mypy-extensions==0.4.3
-numpy==1.21.3
-pandas==1.3.4
-pathspec==0.9.0
-platformdirs==2.4.0
-plotly==5.3.1
-pylint==2.11.1
-python-dateutil==2.8.2
-python-dotenv==0.19.1
-pytz==2021.3
-regex==2021.10.23
+Pygments==2.10.0
+PySocks==1.7.1
 requests==2.26.0
-Shapely==1.8.0
-six==1.16.0
-tenacity==8.0.1
-toml==0.10.2
-tomli==1.2.2
-typing-extensions==3.10.0.2
+requests-toolbelt==0.9.1
 urllib3==1.26.7
-wrapt==1.13.2
