feat: add yolov5 configs

--- a/.gitignore
+++ b/.gitignore
@@ -146,6 +146,7 @@ data/**/*.jpg
 data/models
 models/detectron2/output/model_final.pth
 models/detectron2/output/model_final.pth
+models/yolov5/weights
 
 # label studio
 data/label-studio/export
