--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,116 @@
+absl-py==1.0.0
+antlr4-python3-runtime==4.8
+appdirs==1.4.4
+astroid==2.8.4
+backcall==0.2.0
+black==21.4b2
+cachetools==4.2.4
 certifi==2021.10.8
-charset-normalizer==2.0.9
+charset-normalizer==2.0.7
+click==8.0.3
+cloudpickle==2.0.0
 colorama==0.4.4
-defusedxml==0.7.1
-httpie==2.6.0
+configparser==5.2.0
+cycler==0.11.0
+Cython==0.29.26
+debugpy==1.5.1
+decorator==5.1.0
+-e git+https://github.com/facebookresearch/detectron2@085fda47bc49f2cdd9c05a895580b2b31fcdb6c3#egg=detectron2&subdirectory=..\..\..\..\models\detectron2\detectron2
+docker-pycreds==0.4.0
+entrypoints==0.3
+fonttools==4.28.5
+future==0.18.2
+fvcore==0.1.5.post20211023
+gitdb==4.0.9
+GitPython==3.1.24
+google-auth==2.3.3
+google-auth-oauthlib==0.4.6
+grpcio==1.43.0
+hydra-core==1.1.1
 idna==3.3
+importlib-metadata==4.10.0
+iopath==0.1.9
+ipykernel==6.6.0
+ipython==7.30.1
+isort==5.9.3
+jedi==0.18.1
+joblib==1.1.0
+jupyter-client==7.1.0
+jupyter-core==4.9.1
+kiwisolver==1.3.2
+lazy-object-proxy==1.6.0
+Markdown==3.3.6
+matplotlib==3.5.1
+matplotlib-inline==0.1.3
+mccabe==0.6.1
+mypy-extensions==0.4.3
+nest-asyncio==1.5.4
+numpy==1.21.3
+oauthlib==3.1.1
+omegaconf==2.1.1
+opencv-python==4.5.4.60
+packaging==21.3
+pandas==1.3.4
+parso==0.8.3
+pathspec==0.9.0
+pathtools==0.1.2
+pickleshare==0.7.5
+Pillow==8.4.0
+platformdirs==2.4.0
+plotly==5.3.1
+portalocker==2.3.2
+promise==2.3
+prompt-toolkit==3.0.24
+protobuf==3.19.1
+psutil==5.8.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycocotools==2.0.3
+pydot==1.4.2
 Pygments==2.10.0
-PySocks==1.7.1
+pylint==2.11.1
+pyparsing==3.0.6
+python-dateutil==2.8.2
+python-dotenv==0.19.1
+pytz==2021.3
+pywin32==303
+PyYAML==6.0
+pyzmq==22.3.0
+regex==2021.10.23
 requests==2.26.0
-requests-toolbelt==0.9.1
+requests-oauthlib==1.3.0
+rsa==4.8
+scikit-learn==1.0.1
+scipy==1.7.3
+seaborn==0.11.2
+sentry-sdk==1.5.1
+Shapely==1.8.0
+shortuuid==1.0.8
+six==1.16.0
+sklearn==0.0
+smmap==5.0.0
+subprocess32==3.5.4
+tabulate==0.8.9
+tenacity==8.0.1
+tensorboard==2.7.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+termcolor==1.1.0
+threadpoolctl==3.0.0
+toml==0.10.2
+tomli==1.2.2
+torch==1.10.1+cu113
+torchaudio==0.10.1+cu113
+torchvision==0.11.2+cu113
+tornado==6.1
+tqdm==4.62.3
+traitlets==5.1.1
+typing-extensions==3.10.0.2
 urllib3==1.26.7
+wandb==0.12.9
+wcwidth==0.2.5
+Werkzeug==2.0.2
+wrapt==1.13.2
+yacs==0.1.8
+yaspin==2.1.0
+zipp==3.6.0
