--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "@types/react-leaflet": "^2.8.2",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
-    "browser-sync": "^2.27.5",
+    "browser-sync": "^2.27.7",
     "concurrently": "^6.3.0",
     "cross-env": "^7.0.3",
     "esbuild": "^0.13.7",
     "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-react": "^7.26.1",
     "fs-extra": "^10.0.0",
     "husky": "^7.0.2",
@@ -46,7 +47,7 @@
     "lint:app": "eslint -c app/.eslintrc --fix **/*.{ts,tsx}",
     "prepare": "husky install",
     "start": "npm run dev",
-    "sync": "browser-sync start --server --watch --serveStatic 'build' '.' --index 'build/index.html'",
+    "sync": "browser-sync start --server --serveStatic 'build' '.' --index 'build/index.html'",
     "tsc": "tsc --project app/tsconfig.json",
     "tsc:watch": "npm run tsc -- --watch"
   },
