--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
     "@types/react-leaflet": "^2.8.2",
+    "@types/react-leaflet-markercluster": "^3.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "browser-sync": "^2.27.7",
@@ -39,7 +40,8 @@
     "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-leaflet": "^3.2.2"
+    "react-leaflet": "^3.2.2",
+    "react-leaflet-markercluster": "^3.0.0-rc1"
   },
   "scripts": {
     "build": "node app/build.js",
