--- a/.gitignore
+++ b/.gitignore
@@ -147,6 +147,8 @@ app/api/detect
 data/**/*.jpg
 data/models
 data/detected
+data/detected*
+data/mosaic*
 models/detectron2/runs
 models/yolov5/weights
 
