--- a/requirements.txt
+++ b/requirements.txt
@@ -130,6 +130,7 @@ tensorboard==2.7.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.0
 termcolor==1.1.0
+thop==0.0.31.post2005241907
 threadpoolctl==3.0.0
 toml==0.10.2
 tomli==1.2.2
