--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -17,7 +17,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        pip install pylint flask werkzeug shapely requests dotenv plotly pandas
     - name: Analysing the code with pylint
       run: |
         pylint $(git ls-files '*.py')
