--- a/models/yolov5/cfg/mosaic-noise-x3-data.yaml
+++ b/models/yolov5/cfg/mosaic-noise-x3-data.yaml
@@ -1,5 +1,6 @@
-train: ../../data/models/yolov5/mosaic-noise-x3/train/images
-val: ../../data/models/yolov5/mosaic-noise-x3/valid/images
+train: ../../../data/models/yolov5/mosaic-noise-x3/train/images
+val: ../../../data/models/yolov5/mosaic-noise-x3/valid/images
+test: ../../../data/models/yolov5/mosaic-noise-x3/test/images
 
 nc: 1
 names: ["litter"]
