--- a/models/yolov5/cfg/mosaic-x2-data.yaml
+++ b/models/yolov5/cfg/mosaic-x2-data.yaml
@@ -1,5 +1,6 @@
-train: ../../data/models/yolov5/mosaic-x2/train/images
-val: ../../data/models/yolov5/mosaic-x2/valid/images
+train: ../../../data/models/yolov5/mosaic-x2/train/images
+val: ../../../data/models/yolov5/mosaic-x2/valid/images
+test: ../../../data/models/yolov5/mosaic-x2/test/images
 
 nc: 1
 names: ["litter"]
