--- a/requirements.txt
+++ b/requirements.txt
@@ -1,149 +1,11 @@
-absl-py==1.0.0
-antlr4-python3-runtime==4.8
-appdirs==1.4.4
-asgiref==3.5.0
-astroid==2.8.4
-attrs==21.4.0
-backcall==0.2.0
-black==21.4b2
-botocore==1.19.63
-cachetools==4.2.4
-certifi==2021.10.8
-cffi==1.15.0
-charset-normalizer==2.0.7
-click==8.0.3
-cloudpickle==2.0.0
-colorama==0.4.4
-configparser==5.2.0
-coreapi==2.3.3
-coreschema==0.0.4
-cycler==0.11.0
-Cython==0.29.26
-debugpy==1.5.1
-decorator==5.1.0
-Deprecated==1.2.13
-Django==3.1.14
-docker-pycreds==0.4.0
-entrypoints==0.3
-Flask==2.0.3
-fonttools==4.28.5
-future==0.18.2
-fvcore==0.1.5.post20211023
-gitdb==4.0.9
-GitPython==3.1.24
-google-api-core==1.31.5
-google-auth==1.35.0
-google-auth-oauthlib==0.4.6
-googleapis-common-protos==1.52.0
-grpcio==1.43.0
-hydra-core==1.1.1
-idna==3.3
-importlib-metadata==4.10.0
-iopath==0.1.9
-ipykernel==6.6.0
-ipython==7.30.1
-ipython-genutils==0.2.0
-isodate==0.6.1
-isort==5.9.3
-itsdangerous==2.1.1
-itypes==1.2.0
-jedi==0.18.1
-Jinja2==3.0.3
-jmespath==0.10.0
-joblib==1.1.0
-jsonschema==4.3.3
-jupyter-client==7.1.0
-jupyter-core==4.9.1
-kiwisolver==1.3.2
-lazy-object-proxy==1.6.0
-Markdown==3.3.6
-MarkupSafe==2.1.0
-matplotlib==3.5.1
-matplotlib-inline==0.1.3
-mccabe==0.6.1
-mypy-extensions==0.4.3
-nbformat==5.1.3
-nest-asyncio==1.5.4
-numpy==1.21.3
-oauthlib==3.1.1
-omegaconf==2.1.1
-opencv-python==4.5.4.60
-packaging==21.3
-pandas==1.3.4
-parso==0.8.3
-pathspec==0.9.0
-pathtools==0.1.2
-patsy==0.5.2
-pickleshare==0.7.5
-Pillow==9.0.1
-platformdirs==2.4.0
-plotly==5.3.1
-portalocker==2.3.2
-promise==2.3
-prompt-toolkit==3.0.24
-proto-plus==1.20.3
-protobuf==3.19.1
-psutil==5.8.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycocotools==2.0.3
-pycparser==2.21
-pydot==1.4.2
-Pygments==2.10.0
-pylint==2.11.1
-pyparsing==3.0.6
-pyRFC3339==1.1
-pyrsistent==0.18.0
-python-dateutil==2.8.1
-python-dotenv==0.19.1
-pytz==2019.3
-PyYAML==6.0
-pyzmq==22.3.0
-redis==4.1.4
-regex==2021.10.23
-requests==2.26.0
-requests-oauthlib==1.3.0
-rq==1.10.0
-rsa==4.8
-ruamel.yaml==0.17.21
-ruamel.yaml.clib==0.2.6
-s3transfer==0.3.7
-scikit-learn==1.0.2
-scipy==1.7.3
-seaborn==0.11.2
-semver==2.13.0
-sentry-sdk==1.5.1
-Shapely==1.8.0
-shortuuid==1.0.8
-simplejson==3.17.6
-six==1.16.0
-sklearn==0.0
-smmap==5.0.0
-sqlparse==0.4.2
-statsmodels==0.13.1
-subprocess32==3.5.4
-tabulate==0.8.9
-tenacity==8.0.1
-tensorboard==2.7.0
-tensorboard-data-server==0.6.1
-tensorboard-plugin-wit==1.8.0
-termcolor==1.1.0
-thop==0.0.31.post2005241907
-threadpoolctl==3.0.0
-toml==0.10.2
-tomli==1.2.2
-tornado==6.1
-tqdm==4.62.3
-traitlets==5.1.1
-typing_extensions==4.1.1
-ua-parser==0.10.0
-uritemplate==4.1.1
-urllib3==1.26.7
-user-agents==2.2.0
-wandb==0.12.9
-wcwidth==0.2.5
-Werkzeug==2.0.2
-wrapt==1.13.2
-yacs==0.1.8
-yaspin==2.1.0
-zipp==3.6.0
+pandas
+numpy
+seaborn
+matplotlib
+statsmodels
+patsy
+scipy
+requests
+shapely
+python-dotenv
+plotly
